// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput component should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-file-input-wrap"
      >
        <div
          class="el-flex-align-center el-flex-container"
        >
          <button
            class="el-mr4 el-intent-low el-button"
            type="button"
          >
            Upload
            <div
              class="el-button-loader"
            />
          </button>
          <input
            class="el-file-input"
            data-testid="el-file-input"
            type="file"
          />
          <input
            class="el-file-input-hidden"
            id="test-static-id"
            value=""
          />
          <p
            class="el-has-grey-text el-has-no-margin el-small-text"
          >
            Upload File
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-file-input-wrap"
    >
      <div
        class="el-flex-align-center el-flex-container"
      >
        <button
          class="el-mr4 el-intent-low el-button"
          type="button"
        >
          Upload
          <div
            class="el-button-loader"
          />
        </button>
        <input
          class="el-file-input"
          data-testid="el-file-input"
          type="file"
        />
        <input
          class="el-file-input-hidden"
          id="test-static-id"
          value=""
        />
        <p
          class="el-has-grey-text el-has-no-margin el-small-text"
        >
          Upload File
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileInput component should match a snapshot with full props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-file-input-wrap"
      >
        <label
          class="el-label"
        >
          Some Label
        </label>
        <div
          class="el-flex-align-center el-flex-container"
        >
          <button
            class="el-mr4 el-intent-low el-button"
            type="button"
          >
            Change
            <div
              class="el-button-loader"
            />
          </button>
          <input
            class="el-file-input"
            data-testid="el-file-input"
            type="file"
          />
          <input
            class="el-file-input-hidden"
            id="test-static-id"
            value="https://mock.com"
          />
          <div
            class="el-file-input-icon-container"
          >
            <span
              class="el-mr4 el-intent-primary el-icon"
            >
              <svg />
            </span>
            <span
              class="el-mr4 el-intent-primary el-icon"
            >
              <svg />
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-file-input-wrap"
    >
      <label
        class="el-label"
      >
        Some Label
      </label>
      <div
        class="el-flex-align-center el-flex-container"
      >
        <button
          class="el-mr4 el-intent-low el-button"
          type="button"
        >
          Change
          <div
            class="el-button-loader"
          />
        </button>
        <input
          class="el-file-input"
          data-testid="el-file-input"
          type="file"
        />
        <input
          class="el-file-input-hidden"
          id="test-static-id"
          value="https://mock.com"
        />
        <div
          class="el-file-input-icon-container"
        >
          <span
            class="el-mr4 el-intent-primary el-icon"
          >
            <svg />
          </span>
          <span
            class="el-mr4 el-intent-primary el-icon"
          >
            <svg />
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
